alpm-db/tests/parse_errors/files/snapshots/whitespace_as_path.snap
---
source: alpm-db/tests/parse_errors.rs
description: "%FILES%\nusr/\nusr/bin/\n        \nusr/bin/foo\n"
expression: error.to_string()
---
Parser failed with the following error:
parse error at line 4, column 1
  |
4 |         
  | ^
invalid relative path
expected relative path not consisting of whitespaces and/or tabs
